Fix visibility slider position

--- a/client/app/collections/collection/collection.component.scss
+++ b/client/app/collections/collection/collection.component.scss
@@ -1,4 +1,8 @@
 mat-slide-toggle {
-    margin-left: 1em;
     margin-bottom: 1em;
+    margin-left: 1em;
+}
+
+mat-slider {
+    margin-left: 25px;
 }
